--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -10,19 +10,22 @@
             <div class="owl-carousel owl-theme home_slider">
 
                 <!-- Slider Item -->
+                <!--THIS DIV IS GOING TO BE FOR-EACHED!-->
+                <!-- slider shows as many as we pass to it costom.js initHomeSlider() -->
+
                 <div class="owl-item">
-                    <div class="home_slider_background" style="background-image:url(images/home_slider.jpg)"></div>
+                    <div class="home_slider_background" style="background-image:url(images/regular.jpg)"></div>
                     <div class="home_slider_content_container">
                         <div class="container">
                             <div class="row">
                                 <div class="col">
                                     <div class="home_slider_content">
-                                        <div class="home_slider_item_category trans_200"><a href="category.html" class="trans_200">sport</a></div>
+                                        <div class="home_slider_item_category trans_200"><a href="category.html" class="trans_200">Novini</a></div>
                                         <div class="home_slider_item_title">
-                                            <a href="post.html">How Did van Gogh’s Turbulent Mind Depict One of the Most Complex Concepts in Physics?</a>
+                                            <a href="post.html">HOW DID I MANAGE TO GET HERE</a>
                                         </div>
                                         <div class="home_slider_item_link">
-                                            <a href="post.html" class="trans_200">Continue Reading
+                                            <a href="post.html" class="trans_200">{{ localLang.readMore }}
                                                 <svg version="1.1" id="link_arrow_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                                                      width="19px" height="13px" viewBox="0 0 19 13" enable-background="new 0 0 19 13" xml:space="preserve">
 													<polygon fill="#FFFFFF" points="12.475,0 11.061,0 17.081,6.021 0,6.021 0,7.021 17.038,7.021 11.06,13 12.474,13 18.974,6.5 "/>
@@ -68,7 +71,7 @@
                             <div class="home_slider_next" style="background-image:url(images/home_slider_next.jpg)">
                                 <div class="home_slider_next_background trans_400"></div>
                                 <div class="home_slider_next_content trans_400">
-                                    <div class="home_slider_next_title">next</div>
+                                    <div class="home_slider_next_title">{{ localLang.nextArticle }}</div>
                                     <div class="home_slider_next_link">How Did van Gogh’s Turbulent Mind Depict One of the Most Complex Concepts in Physics?</div>
                                 </div>
                             </div>
@@ -146,72 +149,6 @@
                 </div>
 
                 <!-- Slider Item -->
-                <div class="owl-item">
-                    <div class="home_slider_background" style="background-image:url(images/home_slider.jpg)"></div>
-                    <div class="home_slider_content_container">
-                        <div class="container">
-                            <div class="row">
-                                <div class="col">
-                                    <div class="home_slider_content">
-                                        <div class="home_slider_item_category trans_200"><a href="category.html" class="trans_200">sport</a></div>
-                                        <div class="home_slider_item_title">
-                                            <a href="post.html">How Did van Gogh’s Turbulent Mind Depict One of the Most Complex Concepts in Physics?</a>
-                                        </div>
-                                        <div class="home_slider_item_link">
-                                            <a href="post.html" class="trans_200">Continue Reading
-                                                <svg version="1.1" id="link_arrow_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-                                                     width="19px" height="13px" viewBox="0 0 19 13" enable-background="new 0 0 19 13" xml:space="preserve">
-													<polygon fill="#FFFFFF" points="12.475,0 11.061,0 17.081,6.021 0,6.021 0,7.021 17.038,7.021 11.06,13 12.474,13 18.974,6.5 "/>
-												</svg>
-                                            </a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- Similar Posts -->
-                    <div class="similar_posts_container">
-                        <div class="container">
-                            <div class="row d-flex flex-row align-items-end">
-
-                                <!-- Similar Post -->
-                                <div class="col-lg-3 col-md-6 similar_post_col">
-                                    <div class="similar_post trans_200">
-                                        <a href="post.html">How Did van Gogh’s Turbulent Mind Depict One of the Most</a>
-                                    </div>
-                                </div>
-
-                                <!-- Similar Post -->
-                                <div class="col-lg-3 col-md-6 similar_post_col">
-                                    <div class="similar_post trans_200">
-                                        <a href="post.html">How Did van Gogh’s Turbulent Mind Depict One of the Most</a>
-                                    </div>
-                                </div>
-
-                                <!-- Similar Post -->
-                                <div class="col-lg-3 col-md-6 similar_post_col">
-                                    <div class="similar_post trans_200">
-                                        <a href="post.html">How Did van Gogh’s Turbulent Mind Depict One of the Most</a>
-                                    </div>
-                                </div>
-
-                            </div>
-                        </div>
-
-                        <div class="home_slider_next_container">
-                            <div class="home_slider_next" style="background-image:url(images/home_slider_next.jpg)">
-                                <div class="home_slider_next_background trans_400"></div>
-                                <div class="home_slider_next_content trans_400">
-                                    <div class="home_slider_next_title">next</div>
-                                    <div class="home_slider_next_link">How Did van Gogh’s Turbulent Mind Depict One of the Most Complex Concepts in Physics?</div>
-                                </div>
-                            </div>
-                        </div>
-
-                    </div>
-                </div>
 
             </div>
 
@@ -627,7 +564,7 @@
 
                     </div>
                     <div class="load_more">
-                        <div id="load_more" class="load_more_button text-center trans_200">Load More</div>
+                        <div id="load_more" class="load_more_button text-center trans_200">{{ localLang.loadMore }}</div>
                     </div>
                 </div>
 
@@ -641,7 +578,7 @@
 
                         <div class="sidebar_section">
                             <div class="sidebar_title_container">
-                                <div class="sidebar_title">Top Stories</div>
+                                <div class="sidebar_title">{{ localLang.topArticles }}</div>
                                 <div class="sidebar_slider_nav">
                                     <div class="custom_nav_container sidebar_slider_nav_container">
                                         <div class="custom_prev custom_prev_top">
@@ -1339,5 +1276,4 @@
 
 {% block javascripts %}
     <script src="{{ asset('styles/plugins/jquery.mb.YTPlayer-3.1.12/jquery.mb.YTPlayer.js') }}"></script>
-    <script src="{{ asset('styles/js/custom.js') }}"></script>
 {% endblock %}
