--- a/app/Resources/views/partials/header.html.twig
+++ b/app/Resources/views/partials/header.html.twig
@@ -3,7 +3,7 @@
         <div class="row">
             <div class="col">
                 <div class="header_content d-flex flex-row align-items-center justify-content-start">
-                    <div class="logo"><a href="/">{{ twigInformer.websiteName }}</a></div>
+                    <div class="logo"><a href="/"><img src="{{ asset('images/jesterous-logo.png') }}" class="logo" style="max-height: 85px;" alt="">{{ twigInformer.websiteName }}</a></div>
                     <nav class="main_nav">
                         <ul>
                             <li class="route-"><a href="/">{{ localLang.home }}</a></li>
