social links, segregated js code, logo

--- a/app/Resources/views/partials/header.html.twig
+++ b/app/Resources/views/partials/header.html.twig
@@ -15,6 +15,21 @@
                         <div class="weather">
                             <i class="fa fa-bell"></i>
                         </div>
+                        <div class="weather">
+                            <div class="language-selection">
+                                <div>
+                                    <label class="m-0">BG
+                                        <input name="lang" type="radio" value="bg">
+                                    </label>
+                                </div>
+                                <div>
+                                    <label class="m-0">
+                                        EN
+                                        <input  name="lang" type="radio" value="en">
+                                    </label>
+                                </div>
+                            </div>
+                        </div>
                         <form action="#">
                             <input type="search" class="header_search_input" required="required"
                                    placeholder="{{ localLang.typeToSearch }}">
