--- a/app/Resources/views/partials/scripts.html.twig
+++ b/app/Resources/views/partials/scripts.html.twig
@@ -9,4 +9,7 @@
     <script src="{{ asset('styles/plugins/masonry/images_loaded.js') }}"></script>
     <script src="{{ asset('styles/plugins/parallax-js-master/parallax.min.js') }}"></script>
     <script src="{{ asset('styles/js/custom.js') }}"></script>
+
+    <!-- custom scripts by backendDevs -->
+    <script src="{{ asset('styles/js/lang-manager.js') }}"></script>
 </div>
