--- a/app/Resources/views/partials/footer.html.twig
+++ b/app/Resources/views/partials/footer.html.twig
@@ -7,11 +7,11 @@
                     <div class="footer_social">
                         <ul>
                             <li class="footer_social_facebook"><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                            <li class="footer_social_twitter"><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-                            <li class="footer_social_pinterest"><a href="#"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li>
-                            <li class="footer_social_vimeo"><a href="#"><i class="fa fa-vimeo" aria-hidden="true"></i></a></li>
-                            <li class="footer_social_instagram"><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-                            <li class="footer_social_google"><a href="#"><i class="fa fa-google" aria-hidden="true"></i></a>
+                            <li class="footer_social_twitter"><a  target="_blank" href="https://twitter.com/Jesterous1"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                            <li class="footer_social_pinterest"><a target="_blank" href="https://www.pinterest.com/jesterousblog/pins/"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li>
+                            <li class="footer_social_instagram"><a  target="_blank" href="https://www.instagram.com/jesterous_blog/"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+                            <li class="footer_social_instagram"><a  target="_blank" href="https://www.youtube.com/channel/UCgsQve_pkdcaph7yPvq14Kg"><i class="fa fa-youtube-play" aria-hidden="true"></i></a></li>
+                            <li class="footer_social_google"><a href="{{ path('contacts_page') }}"><i class="fa fa-google" aria-hidden="true"></i></a>
                             </li>
                         </ul>
                     </div>
@@ -28,9 +28,9 @@
                 <div class="subscribe">
                     <div class="subscribe_background"></div>
                     <div class="subscribe_content">
-                        <div class="subscribe_title">Subscribe</div>
+                        <div class="subscribe_title">{{ localLang.subscribe }}</div>
                         <form action="#">
-                            <input type="email" class="sub_input" placeholder="Your Email" required="required">
+                            <input type="email" class="sub_input" placeholder="{{ localLang.yourEmail }}" required="required">
                             <button class="sub_button">
                                 <svg version="1.1" id="link_arrow_1" xmlns="http://www.w3.org/2000/svg"
                                      xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
