subscribe form added

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
 <head>
-
     <!-- title -->
     <title>{% block title %}Jesterous{% endblock %}</title>
     <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}"/>
@@ -11,6 +10,16 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- facebook  -->
+    {#<meta property="fb:app_id" content="{% block fpApp %}877451472440637{% endblock %}">#}
+    <meta property="og:type" content="{% block ogType %}website{% endblock %}"/>
+    <meta property="og:url" content="{% block ogUrl %}178.239.112.78{% endblock %}"/>
+    <meta property="og:title" content="{% block ogTitle %}Jesterous{% endblock %}"/>
+    <meta property="og:image"
+          content="{% block ogImage %}https://sibirskozdrave-montana.com/styles/images/pageBanner.png{% endblock %}"/>
+    <meta property="og:description" content="{% block ogDescription %}Сайт за {% endblock %}"/>
+    <!-- end facebook -->
 
     <!-- css -->
     <link rel="stylesheet" type="text/css" href="{{ asset('styles/styles/bootstrap4/bootstrap.min.css') }}">
@@ -23,6 +32,9 @@
     {#<link rel="stylesheet" type="text/css" href="{{ asset('styles/plugins/jquery.mb.YTPlayer-3.1.12/jquery.mb.YTPlayer.css') }}">#}
 
     {% block stylesheets %}{% endblock %}
+
+    <!-- js-->
+    <script src="{{ asset('styles/js/jquery-3.2.1.min.js') }}"></script>
 
 </head>
 <body>
