--- a/app/Resources/views/partials/footer.html.twig
+++ b/app/Resources/views/partials/footer.html.twig
@@ -6,7 +6,7 @@
                     <div class="footer_logo"><a href="#">{{ twigInformer.websiteName }}</a></div>
                     <div class="footer_social">
                         <ul>
-                            <li class="footer_social_facebook"><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                            <li class="footer_social_facebook"><a target="_blank" href="https://www.facebook.com/jesterousblog/"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
                             <li class="footer_social_twitter"><a  target="_blank" href="https://twitter.com/Jesterous1"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
                             <li class="footer_social_pinterest"><a target="_blank" href="https://www.pinterest.com/jesterousblog/pins/"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li>
                             <li class="footer_social_instagram"><a  target="_blank" href="https://www.instagram.com/jesterous_blog/"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
