added facebook share tags

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -19,6 +19,7 @@
     <meta property="og:image"
           content="{% block ogImage %}https://sibirskozdrave-montana.com/styles/images/pageBanner.png{% endblock %}"/>
     <meta property="og:description" content="{% block ogDescription %}Сайт за {% endblock %}"/>
+    {% block facebookMetas %} {% endblock %}
     <!-- end facebook -->
 
     <!-- css -->
