--- a/app/Resources/views/partials/header.html.twig
+++ b/app/Resources/views/partials/header.html.twig
@@ -54,7 +54,7 @@
             <div></div>
         </div>
     </div>
-    <div class="logo menu_mm"><a href="#">{{ twigInformer.websiteName }}</a></div>
+    <div class="logo menu_mm"><a href="#"s>{{ twigInformer.websiteName }}</a></div>
     <div class="search">
         <form action="#">
             <input type="search" class="header_search_input menu_mm" required="required"
