--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -197,7 +197,7 @@
     </div>
 
     <div class="page_content">
-        <div class="container">
+        <div class="container" style="	background: linear-gradient(to right,rgba(221, 232, 106,0.3), rgba(221, 232, 255,1));">
             <div class="row row-lg-eq-height">
 
                 <!-- Main Content -->
@@ -335,133 +335,22 @@
                             <div class="section_content">
                                 <div class="grid clearfix">
 
-                                    <!-- Small Card With Image -->
-                                    <div class="card card_small_with_image grid-item">
-                                        <img class="card-img-top" src="images/post_10.jpg" alt="">
-                                        <div class="card-body">
-                                            <div class="card-title card-title-small"><a href="post.html">How Did van
-                                                    Gogh’s Turbulent Mind Depict One of the Most Complex Concepts in
-                                                    Physics?</a></div>
-                                            <small class="post_meta"><a href="#">Katy Liu</a><span>Sep 29, 2017 at 9:48 am</span>
-                                            </small>
-                                        </div>
-                                    </div>
 
-                                    <!-- Small Card Without Image -->
-                                    <div class="card card_default card_small_no_image grid-item">
-                                        <div class="card-body">
-                                            <div class="card-title card-title-small"><a href="post.html">How Did van
-                                                    Gogh’s Turbulent Mind Depict One of the Most Complex Concepts in
-                                                    Physics?</a></div>
-                                            <small class="post_meta"><a href="#">Katy Liu</a><span>Sep 29, 2017 at 9:48 am</span>
-                                            </small>
-                                        </div>
-                                    </div>
 
-                                    <!-- Small Card With Image -->
-                                    <div class="card card_small_with_image grid-item">
-                                        <img class="card-img-top" src="images/post_15.jpg" alt="">
-                                        <div class="card-body">
-                                            <div class="card-title card-title-small"><a href="post.html">How Did van
-                                                    Gogh’s Turbulent Mind Depict One of the Most Complex Concepts in
-                                                    Physics?</a></div>
-                                            <small class="post_meta"><a href="#">Katy Liu</a><span>Sep 29, 2017 at 9:48 am</span>
-                                            </small>
-                                        </div>
-                                    </div>
-
-                                    <!-- Small Card With Image -->
-                                    <div class="card card_small_with_image grid-item">
-                                        <img class="card-img-top" src="images/post_13.jpg"
-                                             alt="https://unsplash.com/@jakobowens1">
-                                        <div class="card-body">
-                                            <div class="card-title card-title-small"><a href="post.html">How Did van
-                                                    Gogh’s Turbulent Mind Depict One of the Most Complex Concepts in
-                                                    Physics?</a></div>
-                                            <small class="post_meta"><a href="#">Katy Liu</a><span>Sep 29, 2017 at 9:48 am</span>
-                                            </small>
-                                        </div>
-                                    </div>
-
+                                    {% for post in latestPosts %}
                                     <!-- Small Card With Background -->
                                     <div class="card card_default card_small_with_background grid-item">
                                         <div class="card_background"
-                                             style="background-image:url(images/post_11.jpg)"></div>
+                                             style="background:linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)),url('{{ post.backgroundImageLink }}'); -webkit-background-size: cover;background-size: cover;"></div>
                                         <div class="card-body">
-                                            <div class="card-title card-title-small"><a href="post.html">How Did van
-                                                    Gogh’s Turbulent Mind Depict One of the Most Complex Concepts in
-                                                    Physics?</a></div>
-                                            <small class="post_meta"><a href="#">Katy Liu</a><span>Sep 29, 2017 at 9:48 am</span>
+                                            <div class="card-title card-title-small"><a href="{{ path('show_article', {'id': post.id}) }}">{{ post.title }}</a></div>
+                                            <small class="post_meta "><a href="#" class="text-light">{{ post.author.username }}</a><span class="text-light">{{ post.dateAdded.format("d - M - Y") }}</span>
                                             </small>
                                         </div>
                                     </div>
 
-                                    <!-- Small Card With Background -->
-                                    <div class="card card_default card_small_with_background grid-item">
-                                        <div class="card_background"
-                                             style="background-image:url(images/post_16.jpg)"></div>
-                                        <div class="card-body">
-                                            <div class="card-title card-title-small"><a href="post.html">How Did van
-                                                    Gogh’s Turbulent Mind Depict One of the Most Complex Concepts in
-                                                    Physics?</a></div>
-                                            <small class="post_meta"><a href="#">Katy Liu</a><span>Sep 29, 2017 at 9:48 am</span>
-                                            </small>
-                                        </div>
-                                    </div>
+                                    {% endfor %}
 
-                                    <!-- Small Card With Image -->
-                                    <div class="card card_small_with_image grid-item">
-                                        <img class="card-img-top" src="images/post_14.jpg" alt="">
-                                        <div class="card-body">
-                                            <div class="card-title card-title-small"><a href="post.html">How Did van
-                                                    Gogh’s Turbulent Mind Depict One of the Most Complex Concepts in
-                                                    Physics?</a></div>
-                                            <small class="post_meta"><a href="#">Katy Liu</a><span>Sep 29, 2017 at 9:48 am</span>
-                                            </small>
-                                        </div>
-                                    </div>
-
-                                    <!-- Small Card Without Image -->
-                                    <div class="card card_default card_small_no_image grid-item">
-                                        <div class="card-body">
-                                            <div class="card-title card-title-small"><a href="post.html">How Did van
-                                                    Gogh’s Turbulent Mind Depict One of the Most Complex Concepts in
-                                                    Physics?</a></div>
-                                            <small class="post_meta"><a href="#">Katy Liu</a><span>Sep 29, 2017 at 9:48 am</span>
-                                            </small>
-                                        </div>
-                                    </div>
-
-                                    <!-- Small Card Without Image -->
-                                    <div class="card card_default card_small_no_image grid-item">
-                                        <div class="card-body">
-                                            <div class="card-title card-title-small"><a href="post.html">How Did van
-                                                    Gogh’s Turbulent Mind Depict One of the Most Complex Concepts in
-                                                    Physics?</a></div>
-                                            <small class="post_meta"><a href="#">Katy Liu</a><span>Sep 29, 2017 at 9:48 am</span>
-                                            </small>
-                                        </div>
-                                    </div>
-
-                                    <!-- Default Card With Background -->
-                                    <div class="card card_default card_default_with_background grid-item">
-                                        <div class="card_background"
-                                             style="background-image:url(images/post_12.jpg)"></div>
-                                        <div class="card-body">
-                                            <div class="card-title card-title-small"><a href="post.html">How Did van
-                                                    Gogh’s Turbulent Mind Depict One of the Most</a></div>
-                                        </div>
-                                    </div>
-
-                                    <!-- Default Card With Background -->
-                                    <div class="card card_default card_default_with_background grid-item">
-                                        <div class="card_background"
-                                             style="background-image:url(images/post_6.jpg)"></div>
-                                        <div class="card-body">
-                                            <div class="card-title card-title-small"><a href="post.html">How Did van
-                                                    Gogh’s Turbulent Mind Depict One of the Most</a></div>
-                                        </div>
-                                    </div>
                                 </div>
 
                             </div>
