--- a/web/styles/styles/category.css
+++ b/web/styles/styles/category.css
@@ -235,6 +235,7 @@ section
 	-ms-transition: all 200ms ease;
 	-o-transition: all 200ms ease;
 	transition: all 200ms ease;
+	background: rgba(0,0,0,0.45);
 }
 .header_content
 {
