--- a/web/styles/styles/main_styles.css
+++ b/web/styles/styles/main_styles.css
@@ -232,6 +232,7 @@ section
 	-ms-transition: all 200ms ease;
 	-o-transition: all 200ms ease;
 	transition: all 200ms ease;
+	background: rgba(0,0,0,0.45);
 }
 .header_content
 {
@@ -1238,6 +1239,10 @@ section
 .card_large_with_background .post_meta a
 {
 	color: rgba(255,255,255,0.5);
+}
+
+.card_small_with_background{
+	min-height: 100px;
 }
 
 /*********************************
